--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "amqplib": "^0.5.5",
+    "async-redis": "^1.1.7",
     "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0",
     "socks-proxy-agent": "^4.0.2",
-    "telegraf": "^3.25.5"
+    "telegraf": "^3.33.3",
+    "wretch": "^1.5.5"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
+    "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "nodemon": "^1.18.7",
-    "prettier": "^1.18.2"
+    "nodemon": "^1.19.4",
+    "prettier": "^1.19.1"
   }
 }
